# playerfouls-model

./: Makefile  README.md  requirements.txt
data/raw/fbref/: player_match_2024_2025.parquet  player_match_stats_2021_2022.parquet  player_match_stats_2022_2023.parquet  player_match_stats_2023_2024.parquet  player_match_stats_2024_2025.parquet  team_match_stats_2021_2022.parquet  team_match_stats_2022_2023.parquet  team_match_stats_2023_2024.parquet  team_match_stats_2024_2025.parquet
playerfouls_model/: Makefile  README.md  pyproject.toml
playerfouls_model/docs/: mkdocs.yml
playerfouls_model/docs/docs/: index.md
playerfouls_model/playerfouls_model/: __init__.py  dataset.py  features.py  plots.py
playerfouls_model/playerfouls_model/modeling/: predict.py  train.py
src/etl/: build_base_tables.py
tests/: test_stub.py
